--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "devDependencies": {
         "@monstermann/eslint-config": "^0.4.0",
         "@monstermann/tinybench-pretty-printer": "^0.1.0",
+        "@monstermann/tsconfig": "^0.0.0",
         "@monstermann/vitepress-theme": "^0.2.0",
-        "@sindresorhus/tsconfig": "^7.0.0",
         "bumpp": "^10.1.1",
         "immer": "^10.1.1",
         "mutative": "^1.2.0",
